--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
     "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0",
     "koa": "^2.7.0",
+    "koa-body": "^4.1.0",
     "koa-bodyparser": "^4.2.1",
     "koa-mongoose": "^2.0.0",
     "koa-router": "^7.4.0",
-    "mongoose": "^5.4.20"
+    "mime": "^2.4.0",
+    "mongoose": "^5.4.20",
+    "mz": "^2.7.0",
+    "nunjucks": "^3.2.0",
+    "xlsx": "^0.14.2"
   }
 }
