--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "koa-bodyparser": "^4.2.1",
     "koa-mongoose": "^2.0.0",
     "koa-router": "^7.4.0",
+    "koa2-cors": "^2.0.6",
     "mime": "^2.4.0",
     "mongoose": "^5.4.20",
     "mz": "^2.7.0",
+    "node-xlsx": "^0.14.1",
     "nunjucks": "^3.2.0",
     "xlsx": "^0.14.2"
   }
