--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mz": "^2.7.0",
     "node-xlsx": "^0.14.1",
     "nunjucks": "^3.2.0",
+    "qiniu": "^7.2.1",
     "xlsx": "^0.14.2"
   }
 }
